--- a/test.ipynb
+++ b/test.ipynb
@@ -265,7 +265,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 65,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -291,7 +291,8 @@
     "    return new_segments\n",
     "\n",
     "# Assuming line_segments is the list of line segments\n",
-    "p = 0.13  # Adjust this fraction as needed\n",
+    "# TODO: run in while loop until no red sub-cycles are found\n",
+    "p = 0.09  # Adjust this fraction as needed\n",
     "new_segments = create_randomly_colored_svg(line_segments, p, 'output_random_colored_lines.svg')\n"
    ]
   },
@@ -304,7 +305,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 62,
    "metadata": {},
    "outputs": [
     {
@@ -340,6 +341,11 @@
     "\n",
     "# This is an n^2 algorithm. You can use a spatial index to make it faster?\n",
     "def build_graph(line_segments, epsilon):\n",
+    "    \"\"\"\n",
+    "    O(n^2) algorithm which builds a graph from the line segments. Any vertices which are within an epilson ball of each other\n",
+    "    are grouped into the same node. This algorithm can be made into O(n polylog n)-ish via first sorting along x and y axes.\n",
+    "    Assuming some at most poly-log n points are within an epsilon ball of each other, we can then use a spatial index\n",
+    "    \"\"\"\n",
     "    G = nx.Graph()\n",
     "    for i, segment in enumerate(line_segments):\n",
     "        start, end, color = segment\n",
@@ -358,15 +364,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 63,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "183\n",
-      "Cycle found: [((1985.226384548736+2165.9022391539847j), (1985.226384548736+2165.9022391539847j))]\n"
+      "118\n",
+      "Cycle found: Cycle found, but it does not have the minimum required vertices.\n"
      ]
     }
    ],
@@ -377,12 +383,34 @@
     "print(len(red_edges))\n",
     "red_subgraph = graph.edge_subgraph(red_edges)\n",
     "\n",
+    "def find_cycle_with_min_vertices(graph, min_vertices=3):\n",
+    "    try:\n",
+    "        cycle = nx.find_cycle(graph)\n",
+    "        # Extracting the unique vertices in the cycle\n",
+    "        unique_vertices = {v for edge in cycle for v in edge[:2]}\n",
+    "        if len(unique_vertices) >= min_vertices:\n",
+    "            return cycle\n",
+    "        else:\n",
+    "            return \"Cycle found, but it does not have the minimum required vertices.\"\n",
+    "    except nx.NetworkXNoCycle:\n",
+    "        return \"No cycle found.\"\n",
+    "\n",
+    "\n",
     "# Check for cycles in the red subgraph\n",
     "try:\n",
-    "    cycle = nx.find_cycle(red_subgraph)\n",
+    "    cycle = find_cycle_with_min_vertices(red_subgraph)\n",
     "    print(\"Cycle found:\", cycle)\n",
     "except nx.NetworkXNoCycle:\n",
     "    print(\"No cycle found in the red subgraph.\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 64,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!inkscape -o eps-output-colored-lines.eps output_random_colored_lines.svg "
    ]
   }
  ],
